--- a/src/app/chatroom/chatroom.component.html
+++ b/src/app/chatroom/chatroom.component.html
@@ -1,10 +1,10 @@
                
-  <div class="chat" style="background-color: rgb(39, 38, 37); border-radius: 10px;">
+  <div class="chat" style="background-color: rgb(98, 107, 235); border-radius: 10px;">
     <div class="chat-header clearfix">
       <div class="row">
         <div class="col-lg-6">
           <a href="javascript:void(0);" data-toggle="modal" data-target="#view_info">
-            <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="avatar">
+            <img src="https://www.nic.in/wp-content/uploads/2021/12/chatbot.png" alt="avatar">
           </a>
           <div class="chat-about"> 
             <h6 class="m-b-0" style="color: white;" >{{ frienddetails?.username}}</h6>
@@ -12,12 +12,9 @@
           </div>
         </div>
         <div class="col-lg-6 hidden-sm d-flex justify-content-end align-items-center">
-          <!-- <a href="javascript:void(0);" class="btn btn-outline-secondary"><i class="fa fa-camera"></i></a>
-          <a href="javascript:void(0);" class="btn btn-outline-primary"><i class="fa fa-image"></i></a>
-          <a href="javascript:void(0);" class="btn btn-outline-info"><i class="fa fa-cogs"></i></a>
-          <a href="javascript:void(0);" class="btn btn-outline-warning"><i class="fa fa-question"></i></a> -->
+          
           <div class="dropdown">
-              <i class="bi bi-three-dots-vertical  "  style="color: white;" data-bs-toggle="dropdown" aria-expanded="false"></i>
+              <i class="bi bi-three-dots-vertical  "  style="color: rgb(39, 41, 180);" data-bs-toggle="dropdown" aria-expanded="false"></i>
             <ul class="dropdown-menu"  >
               <li><a class="dropdown-item" (click)="muteUser()" *ngIf="mutedUsers.indexOf(userDetails.recipient) === -1"><i class="bi bi-volume-mute-fill"></i>Mute</a></li>
               <li><a class="dropdown-item" (click)="unMuteUser()" *ngIf="mutedUsers.includes(userDetails.recipient)"><i class="bi bi-volume-down-fill"></i>Unmute</a></li>
@@ -33,7 +30,7 @@
     </div>
    
   
-    <div style="background-image: url('../../assets/chatbackground.jfif'); padding-top: 30px;  ">
+    <div style="background-image: url('../../assets/chatbg3.webp'); padding-top: 30px;  ">
       <div class="chatbox-body" #scrollMe style="max-height: 400px; overflow-y: auto;">
         <div>
           <div class="messages" *ngFor="let message of messages;let i=index">
@@ -57,12 +54,17 @@
   <div class="chat-footer">
     <div class="row">
       <div class="col-md-10">
-        <div class="form-group mb-0">
-          <input type="text"  style="border-radius: 4 px ; border: 1px solid gray;"
-          *ngIf="!(blockedUsers?.includes(userDetails.recipient) || recipientBlockedUsers?.includes(userDetails.sender))"
-            placeholder="Type a message"
+        <div style="display: flex; align-items: center;">
+          <input type="text"
+                 style="border-radius: 4px; border: 1px solid gray; flex: 1;"
+                 *ngIf="!(blockedUsers?.includes(userDetails.recipient) || recipientBlockedUsers?.includes(userDetails.sender))"
+                 placeholder="Type a message"
                  class="form-control"
-                 [(ngModel)]="newMessage" (keyup)="$event.keyCode == 13 && sendMessage()"/>
+                 [(ngModel)]="newMessage" 
+                 (keyup.enter)="sendMessage()" />
+          <!-- <span (click)="openpopup()" style="cursor: pointer;">
+            <i class="bi bi-paperclip"></i>
+          </span> -->
         </div>
         <h5 *ngIf="blockedUsers?.includes(userDetails.recipient)">
           You blocked this contact !
