--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -1,23 +1,87 @@
+
+
+
+
+
+/* Style the container div */
+.user-section {
+  display: flex; /* Use flexbox for a horizontal layout */
+  justify-content: space-between; /* Add space between the heading and the button */
+  align-items: center; /* Vertically align the items */
+  margin-top: 10px; /* Add some margin on top */
+  
+  color: rgb(0, 3, 5); /* Set the text color */
+}
+
+/* Style the "Users" heading */
+.users-heading {
+  text-align: center; /* Center the heading text */
+  margin: 0; /* Remove any default margin */
+}
+
+/* Style the "Add Friend" button with the Font Awesome icon */
+.add-friend-btn {
+  text-align: right; /* Align the button text to the right */
+  background-color: #300b97;
+  color: white;
+}
+.logo {
+  max-width: 50px; /* Adjust this value to your desired width */
+  max-height: 50px; /* Adjust this value to your desired height */
+}
+
+
+.nav-item {
+  display: flex;
+  align-items: center;
+}
+
+.avatar-container {
+  width: 40px; /* Adjust the width and height as needed */
+  height: 40px;
+  border-radius: 50%; /* Create a circular avatar */
+  overflow: hidden; /* Clip the image inside the circle */
+  margin-right: 10px; /* Add some space between the avatar and the user info */
+}
+
+.avatar-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Maintain the aspect ratio and cover the container */
+}
+
+.user-info {
+  display: flex;
+  align-items: center;
+  color: white;
+}
+
+
 body{
   background-color: #f4f7f6;
   margin-top:20px;
+  color: black !important;
 }
 
 body.bg-dark {
-  background-color: blue;
+  background-color: rgb(3, 3, 10);
 }
 
 .chat-app .people-list {
   width: 280px;
   position: absolute;
-  left: 0;
-  top: 0;
-  padding: 20px;
-  z-index: 7;
-  background-color:rgb(39, 38, 37);
+ 
+ color:black;
   width: 100%;
-  border-radius: 10px ; 
+  
   height: 500px; 
+
+  padding: 0 !important;
+  margin: 0 !important;
+  background-color: #b7b8b9;
+  overflow-y: auto;
+  border: 1px solid #f7f7f7;
+  
 
   
 }
@@ -34,16 +98,24 @@ body.bg-dark {
   -o-transition: .5s;
   -webkit-transition: .5s;
   transition: .5s;
+  color: black;
+  position: relative;
+  padding: 10px !important;
+  border-bottom: 1px solid #f7f7f7;
+  height: 72px;
+  margin: 0 !important;
+  cursor: pointer;
 }
 
 .people-list .chat-list li {
   padding: 10px 15px;
   list-style: none;
-  border-radius: 3px
+  border-radius: 3px;
+  color: black; 
 }
 
 .people-list .chat-list li:hover {
-  background: rgb(224, 174, 83);
+  background: rgb(43, 76, 184);
   cursor: pointer;
 
 }
@@ -97,11 +169,11 @@ body.bg-dark {
 }
 
 .offline {
-  color: #e47297
+  color: #e72626
 }
 
 .me {
-  color: #1d8ecd
+  color: #300b97
 }
 
 .float-right {
